<resources>

  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="sign_in_to_continue">Sign in to continue</string>
  <string name="email_address">Email Address</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign in</string>
  <string name="log_out">Log out</string>
  <string name="logged_in_as">Logged in as: %s</string>
  <string name="submit_speed">Submit Speed</string>
  <string name="speed_format">%1$d mph</string>
  <string name="too_slow">Too Slow</string>
  <string name="just_right">Just Right</string>
  <string name="too_fast">Too Fast</string>
  <string name="slow">Slow</string>
  <string name="fast">Fast</string>
  <string name="speed_label_format">Selected Speed: %1$s</string>
  <string name="speed_description_too_slow">Too Slow (1)</string>
  <string name="speed_description_slow">Slow (%1$d)</string>
  <string name="speed_description_just_right">Just Right (5)</string>
  <string name="speed_description_fast">Fast (%1$d)</string>
  <string name="speed_description_too_fast">Too Fast (10)</string>
  <string name="speed_history_format">Speed: %1$d/10 (%2$s)</string>
</resources>
